--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "jest",
 		"dev": "ts-node-dev src/server.ts",
 		"build": "npx tsc",
-		"start": "npx prima migrate deploy && node dist/server.js"
+		"start": "node dist/server.js"
 	},
 	"keywords": [],
 	"author": "",
